WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196865
Incremental bytecode cache should not append function updates when loaded from memory
https://bugs.webkit.org/show_bug.cgi?id=196865
Summary
Incremental bytecode cache should not append function updates when loaded fro...
Tadeu Zagallo
Reported
2019-04-12 10:22:29 PDT
...
Attachments
Patch
(4.95 KB, patch)
2019-04-12 10:48 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2019-04-12 10:48:44 PDT
Created
attachment 367332
[details]
Patch
WebKit Commit Bot
Comment 2
2019-04-15 14:55:39 PDT
Comment on
attachment 367332
[details]
Patch Clearing flags on attachment: 367332 Committed
r244295
: <
https://trac.webkit.org/changeset/244295
>
WebKit Commit Bot
Comment 3
2019-04-15 14:55:41 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-04-15 14:56:31 PDT
<
rdar://problem/49918983
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug